Added user endpoint
