# api/swagger/swagger.yaml
@@ -433,6 +433,88 @@ paths:
             description: Used-material successfully deleted.
           500:
             $ref: "#/responses/Standard500ErrorResponse"  
+            
+
+  /users:
+      x-swagger-router-controller: routeHandler
+      get:
+        tags:
+          - "user"
+        summary: Return all users
+        operationId: getUserAll
+        responses:
+          200:
+            description: A list of users
+            schema:
+              $ref: "#/definitions/users"
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+      post:
+        tags:
+          - "user"
+        summary: Create a user
+        operationId: postUser
+        parameters:
+          - name: user
+            in: body
+            description: The material object that will be inserted
+            schema:
+              $ref: "#/definitions/user"
+        responses:
+          201:
+            $ref: "#/responses/Standard201CreatedResponse" 
+          500:
+            $ref: "#/responses/Standard500ErrorResponse" 
+       
+       
+            
+  /users/{id}:
+      parameters:
+        - $ref: "#/parameters/id"
+      x-swagger-router-controller: routeHandler
+      get:
+        tags:
+          - "user"
+        summary: Return a user
+        operationId: getUserId 
+        responses:
+          200:
+            description: A user object
+            schema:
+              $ref: "#/definitions/user"
+          404:
+            description: The user does not exist.
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+            
+      put:
+        tags:
+          - "user"
+        summary: Change a user
+        operationId: putUser 
+        parameters:
+            - name: user
+              in: body
+              description: The user object that will be changed
+              schema:
+                $ref: "#/definitions/user"
+        responses:
+          204:
+            description: User sucessfully updated.
+          404:
+            $ref: "#/responses/ObjectDoesNotExistResponse"
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"
+      delete:
+        tags:
+          - "user"
+        summary: Delete a user
+        operationId: deleteUser
+        responses:
+          204:
+            description: User successfully deleted.
+          500:
+            $ref: "#/responses/Standard500ErrorResponse"  
           
           
   /swagger:
@@ -618,6 +700,18 @@ definitions:
     type: array
     items:
        $ref: "#/definitions/recycle-type"
+       
+  user:
+    required:
+      - username
+    properties:
+      username:
+        type: string
+  
+  users:
+    type: array
+    items:
+      $ref: "#/definitions/user"
        
        
   
